--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
 /* Logo (1:10) - 71x47 at (98, 63) */
 .logo {
     position: absolute;
-    left: 98px;
+    left: 7.5%;
     top: 63px;
     width: 71px;
     height: 47px;
@@ -62,7 +62,7 @@ body {
 .navigation {
     position: absolute;
     top: 77px;
-    right: 126px;
+    right: 7.5%;
     display: flex;
     gap: 60px;
     align-items: center;
@@ -118,9 +118,10 @@ a:focus {
 /* Line 1 (1:3) - 1084x2 at (98, 130) - STRETCH horizontal */
 .line-1 {
     position: absolute;
-    left: 98px;
+    left: 7.5%;
+    right: 7.5%;
     top: 130px;
-    width: 1084px;
+    width: auto;
     height: 2px;
     background-color: #ffffff;
 }
@@ -128,7 +129,7 @@ a:focus {
 /* Red Moon Title (1:6) - 579x428 at (77, 181) */
 .title-redmoon {
     position: absolute;
-    left: 77px;
+    left: 6%;
     top: 181px;
     width: 579px;
     height: 428px;
@@ -173,7 +174,7 @@ a:focus {
 /* Tagline (1:9) - 735x85 at (88, 602) */
 .tagline {
     position: absolute;
-    left: 88px;
+    left: 6.9%;
     top: 621px;
     width: 735px;
     height: auto;
@@ -189,7 +190,7 @@ a:focus {
 /* Service Section - Straight line design */
 .service-section {
     position: absolute;
-    right: 126px;
+    right: 7.5%;
     top: 135px;
     text-decoration: none;
     cursor: pointer;
@@ -243,7 +244,7 @@ a:focus {
 /* CTA Section */
 .cta-section {
     position: absolute;
-    left: 94px;
+    left: 7.3%;
     top: 702px;
 }
 
@@ -349,7 +350,7 @@ a:focus {
 /* Social Links Container */
 .social-links {
     position: absolute;
-    right: 156px;
+    right: 12.2%;
     top: 46px;
     display: flex;
     flex-direction: column;
